# src/routes/facadeRoutes.js
@@ -32,7 +32,7 @@ router.use(normalizeRpcRequest);
 // Inbox Macros
 router.post('/macros/inbox/overview', facadeController.macroInboxOverview);
 router.post('/macros/inbox/snippets', facadeController.macroInboxSnippets);
-router.post('/macros/inbox/unanswered', facadeController.macroInboxUnanswered);
+router.post('/macros/inbox/userunanswered', facadeController.macroInboxUserUnanswered);
 
 // Email Macros
 router.post('/macros/email/quickRead', facadeController.macroEmailQuickRead);
